Vulkan is now a denpendancy for the project. Supported extension number is written to the console, verifying that Vulkan is ready to be used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ add_subdirectory(extern)
 # Add link director(y/ies) for libraries
 link_directories ("lib")
 
+# Finds the Vulkan directory ? (Not actually sure how it works, research needed)
+find_package(Vulkan REQUIRED)
 
 # Add source to this project's executable.
 add_executable (GPbase "src/sdlMain.c"  "include/GPbase.h" "include/SDL3/SDL.h")
@@ -33,7 +35,7 @@ target_include_directories (GPbase SYSTEM PUBLIC "${PROJECT_SOURCE_DIR}/include"
 # TODO : Include cglm in project files
 # Add libraries to this project's executable.
 # Simply can specify the name of the library because CMake knows to look in the lib folder.
-target_link_libraries (GPbase cglm SDL3)
+target_link_libraries (GPbase cglm SDL3 Vulkan::Vulkan) # <- Since vulkan is found by find_package, can put here (dont know what the :: are for...)
 
 # Copies the pre-compiled SDL3.dll to the EXE's directory. This allows the program to funciton find the DLL AND is distributable.
 # Note : This only occurs ONE TIME when the CMake generation is called. If it is removed, the program will fail to run.
