--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendored/SDL3"]
 	path = vendored/SDL3
 	url = https://github.com/libsdl-org/SDL.git
+[submodule "vendored/cglm"]
+	path = vendored/cglm
+	url = https://github.com/recp/cglm.git
