Added address sanitizer and extra debug info to compile arguments via CMakeLists.txt
Fixed a memory bug caused by incorrectly provided the size of the buffer memory block in createVertexBuffer() and createIndexBuffer()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ execute_process(COMMAND git submodule update --init --recursive)
 add_subdirectory("vendored/SDL3")
 add_subdirectory("vendored/cglm")
 
+add_compile_options(/fsanitize=address /g3)
+
 #[[
 	Gets all .c files from the src directory and stores them at ${PROJECT_SOURCE_FILES}
 ]]
