--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ execute_process(COMMAND git submodule update --init --recursive)
 add_subdirectory("vendored/SDL3")
 add_subdirectory("vendored/cglm")
 
-add_compile_options(/fsanitize=address /g3)
+add_compile_options(/fsanitize=address /g3 /Wall)
 
 #[[
 	Gets all .c files from the src directory and stores them at ${PROJECT_SOURCE_FILES}
